# ha-foxtron-dali

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml  validate.yml
config/custom_components/foxtron_dali/: __init__.py  config_flow.py  const.py  driver.py  event.py  light.py  manifest.json  services.yaml
config/custom_components/foxtron_dali/docs/: protocol_spec.md
config/custom_components/foxtron_dali/translations/: en.json
custom_components/foxtron_dali/: __init__.py  binary_sensor.py  config_flow.py  const.py  device_trigger.py  diagnostics.py  driver.py  event.py  light.py  manifest.json  services.yaml  strings.json
custom_components/foxtron_dali/docs/: protocol_spec.md
custom_components/foxtron_dali/translations/: en.json
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_diagnostics.py  test_driver.py  test_event.py  test_init.py  test_light.py  test_reconnect.py  test_services.py
