[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ha-foxtron-dali"
version = "0.1.0"
description = "Foxtron DALI Home Assistant Integration"
readme = "README.md"
authors = ["docek <60971434+docek@users.noreply.github.com>"]
packages = [{ include = "custom_components/foxtron_dali" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
homeassistant = "2024.3.3"
voluptuous = "0.13.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "4.3.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "8.0.2"
pytest-homeassistant-custom-component = "0.13.109"
pytest-asyncio = "0.23.5"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

