[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ha-foxtron-dali"
version = "0.1.0"
description = "Foxtron DALI Home Assistant Integration"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "docek", email = "60971434+docek@users.noreply.github.com" }]
dependencies = [
    "homeassistant==2024.3.3",
    "voluptuous==0.13.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
]
test = [
    "pytest==8.0.2",
    "pytest-homeassistant-custom-component==0.13.109",
    "pytest-asyncio==0.23.5",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/foxtron_dali"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

