[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ha-foxtron-dali"
version = "0.1.0"
description = "Foxtron DALI Home Assistant Integration"
readme = "README.md"
requires-python = ">=3.14.2"
authors = [{ name = "docek", email = "60971434+docek@users.noreply.github.com" }]
# Pinned to the Home Assistant version running in production so tests
# exercise the same API surface. Bump together with the HA core upgrade.
dependencies = [
    "homeassistant==2026.7.3",
]

[dependency-groups]
dev = [
    "pre-commit==4.3.0",
]
test = [
    "pytest==9.0.3",
    "pytest-homeassistant-custom-component==0.13.347",
    "pytest-asyncio==1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/foxtron_dali"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
